--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "animate.css": "^4.1.1",
+    "firebase": "^11.6.1",
     "framer-motion": "^12.4.7",
     "react": "^18.3.1",
     "react-countup": "^6.5.3",
