--- a/package.json
+++ b/package.json
@@ -3,10 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^2.8.2",
+    "@stripe/react-stripe-js": "^3.7.0",
+    "@stripe/stripe-js": "^7.3.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "animate.css": "^4.1.1",
+    "browser-image-compression": "^2.0.2",
     "firebase": "^11.6.1",
     "framer-motion": "^12.4.7",
     "react": "^18.3.1",
@@ -14,9 +18,11 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "react-paystack": "^6.0.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.2.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.3",
+    "redux-persist": "^6.0.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.15",
     "sweetalert2": "^11.17.2",
