--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "animate.css": "^4.1.1",
+    "bcryptjs": "^3.0.2",
     "browser-image-compression": "^2.0.2",
     "firebase": "^11.6.1",
     "framer-motion": "^12.4.7",
@@ -26,6 +27,7 @@
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.15",
     "sweetalert2": "^11.17.2",
+    "uuid": "^11.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
