--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "browser-image-compression": "^2.0.2",
     "firebase": "^11.6.1",
     "framer-motion": "^12.4.7",
+    "qrcode.react": "^4.2.0",
     "react": "^18.3.1",
     "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
